--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,14 @@
   top: 10px;
 }
 
+#loading {
+  display: flex;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  font-size: 84pt;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(153, 153, 153);
+  z-index: 2;
+}
