--- a/src/buttons/Buttons.css
+++ b/src/buttons/Buttons.css
@@ -1,4 +1,34 @@
 .buttons {
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 10px;
+    background-color: rgb(206, 206, 206);
+    max-width: 250px;
+}
+
+.buttons > * {
+    margin: 5px 0;
+}
+
+.search-result {
+    background-color: rgb(177, 177, 177);
+    border-radius: 5px;
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 5px 0;
+}
+
+.buttons button {
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    background-color: white;
+}
+
+.search-info {
+    margin-right: 5px;
 }
