--- a/src/buttons/Buttons.css
+++ b/src/buttons/Buttons.css
@@ -31,4 +31,59 @@
 
 .search-info {
     margin-right: 5px;
+    flex-grow: 1;
 }
+
+.search-name {
+    margin-bottom: 5px;
+}
+
+.search-sci-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.search-sci-name {
+    font-style: italic;
+    margin-right: 5px;
+}
+
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    border: 1px solid black;
+    border-radius: 100%;
+    color: blue;
+    font-weight: 800;
+}
+  
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    border: 2px solid black;
+    background-color: rgb(230, 255, 255);
+    color: black;
+    text-align: center;
+    padding: 5px;
+    border-radius: 6px;
+    min-width: 100px;
+    font-weight: 100;
+
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    left: -3px;
+    top: -3px;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+  
