Click on nodes instead of buttons

--- a/src/chart/Chart.css
+++ b/src/chart/Chart.css
@@ -9,10 +9,8 @@
     border: 1px solid black;
     border-radius: 5px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
     background-color: white;
-    cursor: default;
 }
 
 .node.highlighted {
@@ -26,35 +24,23 @@
 .node-name {
     font-size: 14pt;
     margin-bottom: 5px;
+    color: #270;
+}
+
+.node-rank {
+    text-align: right;
 }
 
 .node-names {
     flex-grow: 1;
     font-size: 12pt;
-    margin-right: 5px;
     word-wrap: break-word;
     min-width: 0;
+    margin: 5px 0;
 }
 
 .node-sci-name {
     font-style: italic;
-}
-
-.node-meta {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-    word-wrap: break-word;
-}
-
-.node-meta > button {
-    height: 30px;
-    width: 30px;
-    border-radius: 10px;
-    font-weight: bold;
-    font-size: 14pt;
-    cursor: pointer;
 }
 
 .node-button-div {
