--- a/src/buttons/Buttons.css
+++ b/src/buttons/Buttons.css
@@ -67,7 +67,7 @@
 .tooltip .tooltiptext {
     visibility: hidden;
     border: 2px solid black;
-    background-color: rgb(230, 255, 255);
+    background-color: white;
     color: black;
     text-align: center;
     padding: 5px;
